--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Senior Software Engineer (Android)</h3>
+									<span class="company">OLX Group - 2019 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -131,11 +131,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Software Engineer (Android)</h3>
+									<span class="company">OLX Group - 2018- 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -143,11 +143,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
+									<h3 class="timeline-title">Android Developer</h3>
+									<span class="company">To The New Digital - 2015 - 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -160,11 +160,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Masters in Computer Application</h3>
+									<span class="company">University School of Information, Communication & Technology (GGSIPU) - 2012 - 2015</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -173,10 +173,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<span class="company">Acharya Narendra Dev College (University of Delhi) - 2009 - 2012</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -184,11 +184,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
+									<h3 class="timeline-title">Delhi Senior School Certificate Examination (C.B.S.E)</h3>
+									<span class="company">The Union Academy Sr. Sec. School - 2008- 2009</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -196,11 +196,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
+									<h3 class="timeline-title">Delhi Secondary School Examination (C.B.S.E)</h3>
+									<span class="company">The Union Academy Sr. Sec. School - 2006 - 2007</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -219,35 +219,35 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+					<div class="chart" data-percent="95"><span><strong>Java</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+					<div class="chart" data-percent="93"><span><strong>Kotlin</strong>60%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>XML</strong>90%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+					<div class="chart" data-percent="89"><span><strong>SQLITE</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+					<div class="chart" data-percent="85"><span><strong>RxJava</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Unit Testing</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
+					<div class="chart" data-percent="85"><span><strong>Git</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Material <br>Design</strong>90%</span></div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">95%</span></h3>
+						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -255,7 +255,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">Kotlin</span><span class="value-right">60%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -263,7 +263,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+						<h3><span class="name-left">XML</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -271,7 +271,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">SQLITE</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -281,7 +281,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Design</span><span class="value-right">100%</span></h3>
+						<h3><span class="name-left">RxJava</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -289,7 +289,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Ruby</span><span class="value-right">70%</span></h3>
+						<h3><span class="name-left">Unit Testing</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-striped active" role="progressbar"
 						  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -297,7 +297,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Python</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Git</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -305,7 +305,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">jQuery</span><span class="value-right">75%</span></h3>
+						<h3><span class="name-left">Material Design</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -404,20 +404,20 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<a href="https://medium.com/knol/how-to-see-google-ads-network-requests-using-charles-proxy-17c1993a8015" class="blog-bg" style="background-image: url(images/charles_proxy.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3><a href="https://medium.com/knol/how-to-see-google-ads-network-requests-using-charles-proxy-17c1993a8015">How to see Google Ads network requests using Charles Proxy.</a></h3>
+							<p>Recently while debugging Google Ads using Charles proxy, we faced a problem, that is we are not able to see https request of Google Ads to DFP server and this had been happening only on Android 7 and above devices.</p>
 							<ul class="stuff">
-								<li><i class="icon-heart2"></i>249</li>
-								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><i class="icon-heart2"></i>101</li>
+								<!-- <li><i class="icon-eye2"></i>308</li> -->
+								<li><a href="https://medium.com/knol/how-to-see-google-ads-network-requests-using-charles-proxy-17c1993a8015">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
 				</div>
-				<div class="col-md-4">
+				<!-- <div class="col-md-4">
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
 						<div class="blog-text">
@@ -446,7 +446,7 @@
 							</ul>
 						</div> 
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
