final commit update bio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Bharat Ghimire</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 
@@ -86,8 +86,8 @@
 				</div>
 				<div class="col-md-7">
 					<h2>Hello There!</h2>
-					<p>I live in Delhi India . I am an Android Developer by profession and A high-energy and highly proficient Android Developer with the capabilities to deliver end-to-end Android Mobile applications. I am an Android Enthusiast,
-						who can contribute individually, as well as work comfortably with a team of good developers. 
+					<p>Hey, thanks for visiting my site, I’m Bharat Ghimire. I am an Android Developer by profession. Currently working as Senior Android developer at <a href="https://play.google.com/store/apps/details?id=com.olx.southasia&hl=en_IN">OLX</a>. Its more than 5 years since I developed my first Android app. 
+						I love to explore different aspect of programming. When I am not working or reading, I usually go for long distance running. I enjoy interacting with other people from the community and sharing my thoughts with them. Connect with me if you want to talk about android or running over coffee or beer.
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -398,7 +398,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Post on Medium</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>Blogs which you must look if you learn some look stuff in android.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -456,15 +456,15 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<h2>Resume !</h2>
+					<p>Want to hire me. Here is the link of my resume link. Download it from here.</p>
+					<p><a href="https://drive.google.com/file/d/0B1yWrAOqa5OWTkVQdkprOThIeG8/view?usp=sharing"  target="_blank" class="btn btn-default btn-lg">RESUME</a></p>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="fh5co-consult">
+	<!-- <div id="fh5co-consult">
 		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
 			<div class="overlay"></div>
 		</div>
@@ -505,20 +505,20 @@
 
 			</form>	
 		</div>
-	</div>
+	</div> -->
 
 	<!-- <div id="map" class="fh5co-map"></div>
 	</div> -->
 	
-	<!-- <div id="fh5co-footer">
+	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">Bharat
+					<p>&copy; All Rights Reserved. Developed by Bharat
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div> 
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
