Added meta info

--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 	
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta property="og:title" content="Bharat Ghimire"/>
+	<meta property="og:site_name" content="bharatghimire005.github.io"/>
+	<meta property="og:description" content="Bharat is an android developer. Want to know more about visit this site"/>
+	
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
