Fixed grammar mistakes

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 				</div>
 				<div class="col-md-7">
 					<h2>Hello There!</h2>
-					<p>Hey, thanks for visiting my site, I’m Bharat Ghimire. I am an Android Developer by profession. Currently working as Senior Android developer at <a href="https://play.google.com/store/apps/details?id=com.olx.southasia&hl=en_IN">OLX</a>. Its more than 5 years since I developed my first Android app. 
-						I love to explore different aspect of programming. When I am not working or reading, I usually go for long distance running. I enjoy interacting with other people from the community and sharing my thoughts with them. Connect with me if you want to talk about android or running over coffee or beer.
+					<p>Hey, thanks for visiting my site, I’m Bharat Ghimire, an Android Developer by profession. Currently working as a Senior Android developer at <a href="https://play.google.com/store/apps/details?id=com.olx.southasia&hl=en_IN">OLX</a>. Its more than 5 years since I developed my first Android app. 
+						I love to explore different aspects of programming. Wheneven do not work or read, I usually go for long distance running. I enjoy interacting with other people from the community and sharing my thoughts with them. Are you tuning with me? Let's chat over coffee or beer!
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -393,7 +393,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Post on Medium</h2>
-					<p>Blogs which you must look if you learn some look stuff in android.</p>
+					<p>Blogs which you must look up, if you're eager to plan to learn stuffs in android.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -403,7 +403,7 @@
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
 							<h3><a href="https://medium.com/knol/how-to-see-google-ads-network-requests-using-charles-proxy-17c1993a8015">How to see Google Ads network requests using Charles Proxy.</a></h3>
-							<p>Recently while debugging Google Ads using Charles proxy, we faced a problem, that is we are not able to see https request of Google Ads to DFP server and this had been happening only on Android 7 and above devices.</p>
+							<p>Recently, while debugging Google Ads using Charles proxy, we faced a problem, that is we are unable to see https request of Google Ads to DFP server and this had been happening only on Android 7 and above devices.</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>101</li>
 								<!-- <li><i class="icon-eye2"></i>308</li> -->
@@ -452,7 +452,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Resume !</h2>
-					<p>Want to hire me. Here is the link of my resume link. Download it from here.</p>
+					<p>Looking for a dedicated Android Developer? Here is the link of my resume, download from the link given below</p>
 					<p><a href="https://drive.google.com/file/d/0B1yWrAOqa5OWTkVQdkprOThIeG8/view?usp=sharing"  target="_blank" class="btn btn-default btn-lg">RESUME</a></p>
 				</div>
 			</div>
